--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,12 @@
     <link rel="stylesheet" href="styles/ios-theme.css">
     <link rel="stylesheet" href="styles/animations.css">
     <!-- endbuild -->
+    <style>
+    .map-canvas { height: 200px; }
+    </style>
   </head>
-  <body ng-app="learnerLoggingUi2App">
+  <!--<body ng-app="learnerLoggingUi2App">--> <!--removed as we are initialising via angular.bootstrap-->
+  <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -104,7 +108,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
+    
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -122,10 +126,14 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
 
-     	<!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/services.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
+	<!-- build:js({.tmp,app}) scripts/scripts.js -->
+	<script src="bower_components/angular-ui-utils/ui-utils.js"></script><!--ToDo replace with cut down 'event' script-->
+	<script src="bower_components/angular-ui-map/ui-map.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initMapCallback"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/services.js"></script>
+	<script src="scripts/controllers/main.js"></script>
+	<!-- endbuild -->
+
 </body>
 </html>
