--- a/app/index.html
+++ b/app/index.html
@@ -84,8 +84,8 @@
 		<span class="tab-label">Profile</span>
 	  </a>
 	  <a class="tab-item" href="#">
-		<span class="icon icon-star-filled"></span>
-		<span class="tab-label">Favorites</span>
+		<span class="icon icon-list"></span>
+		<span class="tab-label">Manage</span>
 	  </a>
 	  <a class="tab-item" href="#">
 		<span class="icon icon-search"></span>
