Upgraded to Ratchet 2.0.2
Also some code tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,11 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/ratchet.css">
-    <link rel="stylesheet" href="styles/ios-theme.css">
+    
+    <!-- may not be necessary, but will still need a place to add overrides/custom css -->
+    <!--<link rel="stylesheet" href="styles/main.css"> -->
+    <link rel="stylesheet" href="styles/ratchet.min.css">
+    <link rel="stylesheet" href="styles/ratchet-theme-ios.min.css">
     <link rel="stylesheet" href="styles/animations.css">
     <!-- endbuild -->
     <style>
