--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,9 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="bower_components/overthrow/dist/overthrow.js"></script>
+    <script src="bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js"></script>
     <!-- endbower -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
